Workaround for text-align-last issue

--- a/main.css
+++ b/main.css
@@ -392,6 +392,7 @@ em {
 	font-size: 24px;
 	margin-bottom: 5px;
 	padding-bottom: 5px;
+	text-align: center;
 	border-bottom: 1px solid #fff;
 }
 
